DOC: Correct rendering of Francois
The accent drops the c in the rendered PDF.

--- a/doc/itkTextureFeature.tex
+++ b/doc/itkTextureFeature.tex
@@ -49,7 +49,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
-\author{Jean-Baptiste Vimort$^{1}$, Matthew McCormick$^{1}$ François Budin$^{1}$ and Beatriz Paniagua$^{1}$}
+\author{Jean-Baptiste Vimort$^{1}$, Matthew McCormick$^{1}$ Francois Budin$^{1}$ and Beatriz Paniagua$^{1}$}
 \authoraddress{$^{1}$Kitware, Inc, Carrboro, NC}
 
 \begin{document}
