--- a/doc/itkTextureFeature.tex
+++ b/doc/itkTextureFeature.tex
@@ -8,6 +8,7 @@
 
 \documentclass{InsightArticle}
 
+\usepackage[utf8]{inputenc}
 \usepackage[dvips]{graphicx}
 \usepackage{color}
 \usepackage{minted}
@@ -49,7 +50,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
-\author{Jean-Baptiste Vimort$^{1}$, Matthew McCormick$^{1}$ Francois Budin$^{1}$ and Beatriz Paniagua$^{1}$}
+\author{Jean-Baptiste Vimort$^{1}$, Matthew McCormick$^{1}$, François Budin$^{1}$ and Beatriz Paniagua$^{1}$}
 \authoraddress{$^{1}$Kitware, Inc, Carrboro, NC}
 
 \begin{document}
