DOC: New version of the acknowledgement section

--- a/doc/itkTextureFeature.tex
+++ b/doc/itkTextureFeature.tex
@@ -46,7 +46,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 % Increment the release number whenever significant changes are made.
 % The author and/or editor can define 'significant' however they like.
-\release{1.0.0}
+\release{1.0.1}
 
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
@@ -569,7 +569,11 @@ This document presented a new fast and efficient tool to compute textural featur
 
 \section*{Acknowledgements}
 
-This work was supported by the National Institute of Health (NIH) National Institute for Dental and Craniofacial Research (NIDCR) R01EB021391 (Textural Biomarkers of Arthritis for the Subchondral Bone in the Temporomandibular Joint). We are also grateful for the support received from the ITK community.
+This work was supported by the National Institute of Health (NIH) National Institute for Dental and Craniofacial Research (NIDCR) R01EB021391 (Textural Biomarkers of Arthritis for the Subchondral Bone in the Temporomandibular Joint). 
+
+We would like to thank Dr. Larry Wolford from the Baylor University Medical Center for kindly providing the bone specimens from which we obtained the scans used in the paper. We would like to thank Drs. Lucia Cevidanes, Erika Benavides and Antonio Ruellas at the University of Michigan School of Dentistry as well, for generating the CBCT scans that were processed with the filters presented in the paper.
+
+We are also grateful for the support received from the ITK community.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
