--- a/doc/itkTextureFeature.tex
+++ b/doc/itkTextureFeature.tex
@@ -355,18 +355,18 @@ int main(int argc, char * argv[])
     std::cerr << argv[0];
     std::cerr << " <InputFilePath> <MaskFilePath> <OutputFilePath> ";
     std::cerr << " <NumberOfBinsPerAxis> <PixelValueMin> ";
-    std::cerr << " <PixelValueMax>  <DistanceValueMin> " ;
+    std::cerr << " <PixelValueMax>  <DistanceValueMin> ";
     std::cerr << " <DistanceValueMax> <NeighborhoodRadius> ";
     std::cerr << std::endl;
     return EXIT_FAILURE;
     }
 
     // Setup types
-    typedef itk::Image< int, 3 >                        InputImageType;
-    typedef itk::Image< itk::Vector< float, 10 > , 3 >  OutputImageType;
-    typedef itk::ImageFileReader< InputImageType >      readerType;
-    typedef itk::Neighborhood<typename InputImageType::PixelType,
-      InputImageType::ImageDimension> NeighborhoodType;
+    using InputImageType = itk::Image< int, 3 >;
+    using OutputImageType = itk::Image< itk::Vector< float, 10 > , 3 >;
+    using readerType = itk::ImageFileReader< InputImageType >;
+    using NeighborhoodType = itk::Neighborhood<typename InputImageType::PixelType,
+      InputImageType::ImageDimension>;
     NeighborhoodType neighborhood;
 
     // Create and setup a reader
@@ -378,8 +378,8 @@ int main(int argc, char * argv[])
     maskReader->SetFileName( argv[2] );
 
     // Apply the filter
-    typedef itk::Statistics::RunLengthTextureFeaturesImageFilter
-                                < InputImageType, OutputImageType > FilterType;
+    using FilterType = itk::Statistics::RunLengthTextureFeaturesImageFilter
+                                < InputImageType, OutputImageType >;
     FilterType::Pointer filter = FilterType::New();
     filter->SetInput(reader->GetOutput());
     filter->SetMaskImage(maskReader->GetOutput());
@@ -390,7 +390,7 @@ int main(int argc, char * argv[])
     filter->SetNeighborhoodRadius(neighborhood.GetRadius());
 
     // Create and setup a writter
-    typedef  itk::ImageFileWriter< OutputImageType  > WriterType;
+    using WriterType = itk::ImageFileWriter< OutputImageType  >;
     WriterType::Pointer writer = WriterType::New();
     std::string outputFilename = argv[3];
     writer->SetFileName(outputFilename.c_str());
